loading only the tiles shown on bounds of the screen Height and width, also need to fix the jump mechanic of the player the player's y position is not updating correctly after pressing W key and applying gravity